--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
   </head>
   <body>
     <div class="mainWrapper">
-      <div class="blurBox"><h1>TS</h1></div>
+      <p class="namePosition">Romanenko Yliia</p>
+      <div class="blurBox">
+        <h1>TS</h1>
+      </div>
+
       <div class="app-box">
         <img src="./img/quin-up.png" alt="королева" class="imgWrap" />
       </div>
-      <div class="center-box" id="big-letters">Romanenko</div>
+      <div class="center-box" id="big-letters">Type Script</div>
+
       <div class="bottom-box">
         <img src="./img/quin-bown.png" alt="королева" />
       </div>
+
       <ul>
         <li class="task-description">
           <h3>
