--- a/Lesson1/tasks/task3/index.html
+++ b/Lesson1/tasks/task3/index.html
@@ -25,7 +25,7 @@
             <button class="task-btn" id="btnTask3">Start Task</button>
           </div>
 
-          <p id="solution3"></p>
+          <div id="solution3"></div>
         </div>
       </div>
     </div>
