--- a/Lesson1/index.html
+++ b/Lesson1/index.html
@@ -18,7 +18,7 @@
         <img src="./img/quin-bown.png" alt="королева" />
       </div>
       <ul>
-        <li class="task-description">
+        <!-- <li class="task-description">
           <h3>
             <a href="./tasks/tasks10.html" class="btn-back"
               ><button>Задача #1</button></a
@@ -31,7 +31,7 @@
             s2 = cos(x + 3 + y^7)
             <br />
           </p>
-        </li>
+        </li> -->
         <li class="task-description">
           <h3>
             <a href="./tasks/task1/index.html" class="btn-back"
@@ -74,6 +74,49 @@
             Вивести чек про купівлю.
           </p>
         </li>
+        <!-- ---4 -->
+        <li class="task-description">
+          <h3>
+            <a href="./tasks/task4/index.html" class="btn-back"
+              ><button>Задача #4</button></a
+            >
+          </h3>
+          <p>
+            Вводиться номер дня або назва дня. <br />
+            Створити функцію, яка за цим значенням виводить на екран чи це
+            робочий день.
+          </p>
+        </li>
+        <!-- ---5 -->
+        <li class="task-description">
+          <h3>
+            <a href="./tasks/task5/index.html" class="btn-back"
+              ><button>Задача #5</button></a
+            >
+          </h3>
+          <p>
+            Випадковим чином 10 разів генерується число або рядок «Ок». <br />
+            Пірахувати чого було більше чисел чи рядків і вивести останнє
+            значення
+          </p>
+        </li>
+        <!-- -6 -->
+        <li class="task-description">
+          <h3>
+            <a href="./tasks/task6/index.html" class="btn-back"
+              ><button>Задача #6</button></a
+            >
+          </h3>
+          <p>
+            Вводиться сума грошей і позначення валюти. <br />Потрібно перевести
+            у інші валюти ("USD" , "EUR" , "UAH"). <br />
+            <br />
+            Тобто якщо вводять гривні, то перевести у долари і євро.
+            <br /><br />
+            А якщо вводять долари, то перевести у гривні і євро. <br />Курси
+            валют - це константи.
+          </p>
+        </li>
 
         <li class="task-description">
           <h3>
@@ -100,6 +143,22 @@
             Ввести ім`я користувача («Гість» якщо не введе) і його вік (0 якщо
             не введе). Якщо вік більше 17 привітати, інакше - повідомити про
             заборону відвідування сайту
+          </p>
+        </li>
+        <!-- 12 -->
+        <li class="task-description">
+          <h3>
+            <a href="./tasks/task12/index.html" class="btn-back"
+              ><button>Task #12</button></a
+            >
+          </h3>
+          <h4>Literals</h4>
+
+          <p>
+            Потрібно ввести стать студента ("male", "female"). <br />
+            У залежносі від цього додати Mr, Ms. <br />
+            let gender: 'male' | 'female' <br />
+            let prefix: 'Mr' | 'Ms'
           </p>
         </li>
         <!-- --13 -->
@@ -136,6 +195,20 @@
             Випадковим чином генерується 10 разів число або якийсь рядок.
             <br />Пірахувати чого було більше чисел чи рядків <br />
             і вивести останне число чи останній рядок
+          </p>
+        </li>
+        <!-- --15 -->
+        <li class="task-description">
+          <h3>
+            <a href="./tasks/task15/index.html" class="btn-back"
+              ><button>Task #15</button></a
+            >
+          </h3>
+          <h4>Literals "x" | "y"</h4>
+
+          <p>
+            Вводиться статус відповіді. <br />
+            Потрібно визначити рядкове представлення ("success" , "error")
           </p>
         </li>
       </ul>
